ZETLAB/ZetHeaders/Zadc.h

// Запросить кол-во линий цифрового порта
long WINAPI ZGetQuantityChannelDigPort(long typeDevice, long numberDSP, long *quantityChannel);
// Запросить маску выходов порта
long WINAPI ZGetDigOutEnable(long typeDevice, long numberDSP, unsigned long *digitalOutEnableMask);
// Записать маску выходов порта
long WINAPI ZSetDigOutEnable(long typeDevice, long numberDSP, unsigned long digitalOutEnableMask);
// Установить линию цифрового порта на выход (без изменения состояния других линий, numberOfBit = 0..quantityChannel-1)
long WINAPI ZSetBitDigOutEnable(long typeDevice, long numberDSP, long numberOfBit);
// Установить маску линий цифрового порта на выход (без изменения состояния других линий)
long WINAPI ZSetBitMaskDigOutEnable(long typeDevice, long numberDSP, unsigned long maskOfBits);
// Установить линию цифрового порта на вход (без изменения состояния других линий, numberOfBit = 0..quantityChannel-1)
long WINAPI ZClrBitDigOutEnable(long typeDevice, long numberDSP, long numberOfBit);
// Установить маску линий цифрового порта на вход (без изменения состояния других линий)
long WINAPI ZClrBitMaskDigOutEnable(long typeDevice, long numberDSP, unsigned long maskOfBits);
// Прочитать данные со входов порта
long WINAPI ZGetDigInput(long typeDevice, long numberDSP, unsigned long *digitalInput);
// Прочитать данные, выдаваемые на выходы порта
long WINAPI ZGetDigOutput(long typeDevice, long numberDSP, unsigned long *digitalOutput);
// Записать данные в порт
long WINAPI ZSetDigOutput(long typeDevice, long numberDSP, unsigned long digitalOutput);
// Установить вывод цифрового порта в "1" (без изменения состояния других выводов, numberOfBit = 0..quantityChannel-1)
long WINAPI ZSetBitDigOutput(long typeDevice, long numberDSP, long numberOfBit);
// Установить маску выводов цифрового порта в "1" (без изменения состояния других выводов)
long WINAPI ZSetBitMaskDigOutput(long typeDevice, long numberDSP, unsigned long maskOfBits);
// Установить вывод цифрового порта в "0" (без изменения состояния других выводов, numberOfBit = 0..quantityChannel-1)
long WINAPI ZClrBitDigOutput(long typeDevice, long numberDSP, long numberOfBit);
// Установить маску выводов цифрового порта в "0" (без изменения состояния других выводов)
long WINAPI ZClrBitMaskDigOutput(long typeDevice, long numberDSP, unsigned long maskOfBits);
// Опросить режим потокового ввода-вывода (mode=0 - аналоговый порт, mode=1 - цифрового порт, mode=2 - UART)
										// +0x04 - Инвертированный UART
										// +0x08 - 9 бит UART
										// +0x10 - 2 стоп-бита UART (не исп.)
										// +0x20 - контроль четности UART (не исп.)
										// +0x40 - IrDA UART (не исп.)
long WINAPI ZGetDigitalMode(long typeDevice, long numberDSP, long *mode);
// Переключить режим потокового ввода-вывода (mode=0 - аналоговый порт, mode=1 - цифрового порт, mode=2 - UART)
long WINAPI ZSetDigitalMode(long typeDevice, long numberDSP, long mode);
// Опрос разрешения генерации сигналов синхронизации на цифровой порт  
long WINAPI ZGetMasterSynchr(long typeDevice, long numberDSP, long *enable);
// Разрешить генерацию сигналов синхронизации на цифровой порт  
long WINAPI ZSetMasterSynchr(long typeDevice, long numberDSP, long enable);
// проверить поддерживается ли модуль ШИМ
long WINAPI ZFindPWM(long typeDevice, long numberDSP, long* present);
// запуск каналов ШИМ
long WINAPI ZStartPWM(long typeDevice, long numberDSP,long Start0, long Start1, long Start2);
// останов каналов ШИМ
long WINAPI ZStopPWM(long typeDevice, long numberDSP, long Stop0, long Stop1, long Stop2);
// задать частоту ШИМ через коэф. деления опорной частоты и период
long WINAPI ZSetFreqPWM(long typeDevice, long numberDSP, long Rate, long Period);
// задать скважность и сдвиг каналов ШИМ
long WINAPI ZSetOnDutyPWM(long typeDevice, long numberDSP, long OnDutyPWM0, long OnDutyPWM1, long OnDutyPWM2, long ShiftPWM1, long ShiftPWM2);
// обмен массивом коэффициентов управления с DSP
long WINAPI ZRegulatorPWM(long typeDevice, long numberDSP, void *data, long *size);
// ------------- Парные функции для работы с АЦП или ЦАП -------------
// поддержка АЦП в текущем режиме DSP
long WINAPI ZGetEnableADC(long typeDevice, long numberDSP, long *enable);
// поддержка ЦАП в текущем режиме DSP
long WINAPI ZGetEnableDAC(long typeDevice, long numberDSP, long *enable);
// установить сигнальный процессор в режим АЦП/ЦАП
long WINAPI ZSetTypeADC(long typeDevice, long numberDSP);
long WINAPI ZSetTypeDAC(long typeDevice, long numberDSP);
// чтение в каком состоянии находится АЦП/ЦАП
long WINAPI ZGetStartADC(long typeDevice, long numberDSP, long *status);
long WINAPI ZGetStartDAC(long typeDevice, long numberDSP, long *status);
// запуск процедуры ввода/вывода сигнала
long WINAPI ZStartADC(long typeDevice, long numberDSP);
long WINAPI ZStartDAC(long typeDevice, long numberDSP);
// останов процедуры ввода/вывода
long WINAPI ZStopADC(long typeDevice, long numberDSP);
long WINAPI ZStopDAC(long typeDevice, long numberDSP);
// прочитать кол-во каналов АЦП/ЦАП
long WINAPI ZGetQuantityChannelADC(long typeDevice, long numberDSP, long *quantityChannel);
long WINAPI ZGetQuantityChannelDAC(long typeDevice, long numberDSP, long *quantityChannel);
// прочитать вес младшего разряда АЦП/ЦАП (устаревшая функция)
long WINAPI ZGetDigitalResolutionADC(long typeDevice, long numberDSP, double *digitalResolution);
long WINAPI ZGetDigitalResolutionDAC(long typeDevice, long numberDSP, double *digitalResolution);
// прочитать откалиброванный поканально вес младшего разряда АЦП/ЦАП (в вольтах) 
long WINAPI ZGetDigitalResolChanADC(long typeDevice, long numberDSP, long numberChannel, double *digitalResolChan);
long WINAPI ZGetDigitalResolChanDAC(long typeDevice, long numberDSP, long numberChannel, double *digitalResolChan);
// прочитать кол-во бит в одном отсчете АЦП/ЦАП
long WINAPI ZGetBitsADC(long typeDevice, long numberDSP, long *numberBits);
long WINAPI ZGetBitsDAC(long typeDevice, long numberDSP, long *numberBits);
// прочитать кол-во слов в одном отсчете АЦП/ЦАП
long WINAPI ZGetWordsADC(long typeDevice, long numberDSP, long *numberWords);
long WINAPI ZGetWordsDAC(long typeDevice, long numberDSP, long *numberWords);
// прочитать частоту дискретизации 
long WINAPI ZGetFreqADC(long typeDevice, long numberDSP, double *freq);
long WINAPI ZGetFreqDAC(long typeDevice, long numberDSP, double *freq);
// прочитать частоту из списка возможных частот дискретизации 
long WINAPI ZGetListFreqADC(long typeDevice, long numberDSP, long next, double *freq);
long WINAPI ZGetListFreqDAC(long typeDevice, long numberDSP, long next, double *freq);
// установить следующую из списка частоту дискретизации 
long WINAPI ZSetNextFreqADC(long typeDevice, long numberDSP, long next, double *freq);
long WINAPI ZSetNextFreqDAC(long typeDevice, long numberDSP, long next, double *freq);
// установить частоту дискретизации
long WINAPI ZSetFreqADC(long typeDevice, long numberDSP, double freqIn, double *freqOut);
long WINAPI ZSetFreqDAC(long typeDevice, long numberDSP, double freqIn, double *freqOut);
// прочитать значение текущей опорной частоты
long WINAPI ZGetExtFreqADC(long typeDevice, long numberDSP, double *oporFreq);
long WINAPI ZGetExtFreqDAC(long typeDevice, long numberDSP, double *oporFreq);
// установить значение внешней опорной частоты
long WINAPI ZSetExtFreqADC(long typeDevice, long numberDSP, double extFreq);
long WINAPI ZSetExtFreqDAC(long typeDevice, long numberDSP, double extFreq);
// прочитать статус синхронизации по внешней частоте 
long WINAPI ZGetEnableExtFreqADC(long typeDevice, long numberDSP, long *enable);
long WINAPI ZGetEnableExtFreqDAC(long typeDevice, long numberDSP, long *enable);
// вкл./выкл. синхронизации по внешней частоте
long WINAPI ZSetEnableExtFreqADC(long typeDevice, long numberDSP, long enable);
long WINAPI ZSetEnableExtFreqDAC(long typeDevice, long numberDSP, long enable);
// прочитать статус внешнего запуска
long WINAPI ZGetEnableExtStartADC(long typeDevice, long numberDSP, long *enable);
long WINAPI ZGetEnableExtStartDAC(long typeDevice, long numberDSP, long *enable);
// вкл./выкл. внешнего запуска
long WINAPI ZSetEnableExtStartADC(long typeDevice, long numberDSP, long enable);
long WINAPI ZSetEnableExtStartDAC(long typeDevice, long numberDSP, long enable);