ZETLAB/ZetHeaders/Zadc.bas


' Запросить кол-во линий цифрового порта
Public Declare Function ZGetQuantityChannelDigPort Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByRef quantityChannel As Long) As Long
' Запросить маску выходов порта
Public Declare Function ZGetDigOutEnable Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByRef digitalOutEnableMask As Long) As Long
' Установить маску выходов порта
Public Declare Function ZSetDigOutEnable Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByVal digitalOutEnableMask As Long) As Long
' Установить линию цифрового порта на выход (без изменения состояния других линий)
Public Declare Function ZSetBitDigOutEnable Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByVal numberOfBit As Long) As Long
' Установить маску линий цифрового порта на выход (без изменения состояния других линий)
Public Declare Function ZSetBitMaskDigOutEnable Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByVal maskOfBits As Long) As Long
' Установить линию цифрового порта на вход (без изменения состояния других линий)
Public Declare Function ZClrBitDigOutEnable Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByVal numberOfBit As Long) As Long
' Установить маску линий цифрового порта на вход (без изменения состояния других линий)
Public Declare Function ZClrBitMaskDigOutEnable Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByVal maskOfBits As Long) As Long
' Прочитать данные со входов порта
Public Declare Function ZGetDigInput Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByRef digitalInput As Long) As Long
' Прочитать данные, выдаваемые на выходы порта
Public Declare Function ZGetDigOutput Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByRef digitalOutput As Long) As Long
' Записать данные в порт
Public Declare Function ZSetDigOutput Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByVal digitalOutput As Long) As Long
' Установить вывод цифрового порта в "1" (без изменения состояния других выводов)
Public Declare Function ZSetBitDigOutput Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByVal numberOfBit As Long) As Long
' Установить маску выводов цифрового порта в "1" (без изменения состояния других выводов)
Public Declare Function ZSetBitMaskDigOutput Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByVal maskOfBits As Long) As Long
' Установить вывод цифрового порта в "0" (без изменения состояния других выводов)
Public Declare Function ZClrBitDigOutput Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByVal numberOfBit As Long) As Long
' Установить маску выводов цифрового порта в "0" (без изменения состояния других выводов)
Public Declare Function ZClrBitMaskDigOutput Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByVal maskOfBits As Long) As Long
' Опросить режим потокового ввода-вывода (enable=0 - аналоговый порт, enable=1 - цифрового порт)
Public Declare Function ZGetDigitalMode Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByRef enable As Long) As Long
' Переключить режим потокового ввода-вывода (enable=0 - аналоговый порт, enable=1 - цифрового порт)
Public Declare Function ZSetDigitalMode Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByVal enable As Long) As Long
' Опрос разрешения генерации сигналов синхронизации на цифровой порт
Public Declare Function ZGetMasterSynchr Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByRef enable As Long) As Long
' Разрешить генерацию сигналов синхронизации на цифровой порт
Public Declare Function ZSetMasterSynchr Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByVal enable As Long) As Long

' проверить поддерживается ли модуль ШИМ
Public Declare Function ZFindPWM Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByRef present As Long) As Long
' запуск каналов ШИМ
Public Declare Function ZStartPWM Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByVal Start0 As Long, ByVal Start1 As Long, ByVal Start2 As Long) As Long
' останов каналов ШИМ
Public Declare Function ZStopPWM Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByVal Stop0 As Long, ByVal Stop1 As Long, ByVal Stop2 As Long) As Long
' задать частоту ШИМ через коэф. деления опорной частоты и период
Public Declare Function ZSetFreqPWM Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByVal Rate As Long, ByVal Period As Long) As Long
' задать скважность и сдвиг каналов ШИМ
Public Declare Function ZSetOnDutyPWM Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByVal OnDutyPWM0 As Long, ByVal OnDutyPWM1 As Long, _
 ByVal OnDutyPWM2 As Long, ByVal ShiftPWM1 As Long, ByVal ShiftPWM2 As Long) As Long
' обмен массивом коэффициентов управления с DSP
Public Declare Function ZRegulatorPWM Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByRef data As Long, ByRef size As Long) As Long


' ------------- Парные функции для работы с АЦП или ЦАП -------------
' поддержка АЦП в текущем режиме DSP
Public Declare Function ZGetEnableADC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByRef enable As Long) As Long
' поддержка ЦАП в текущем режиме DSP
Public Declare Function ZGetEnableDAC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByRef enable As Long) As Long
' установить сигнальный процессор в режим АЦП/ЦАП
Public Declare Function ZSetTypeADC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long) As Long
Public Declare Function ZSetTypeDAC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long) As Long
' чтение в каком состоянии находится АЦП/ЦАП
Public Declare Function ZGetStartADC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByRef status As Long) As Long
Public Declare Function ZGetStartDAC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByRef status As Long) As Long
' запуск процедуры ввода/вывода сигнала
Public Declare Function ZStartADC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long) As Long
Public Declare Function ZStartDAC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long) As Long
' останов процедуры ввода/вывода
Public Declare Function ZStopADC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long) As Long
Public Declare Function ZStopDAC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long) As Long

' прочитать кол-во каналов АЦП/ЦАП
Public Declare Function ZGetQuantityChannelADC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByRef quantityChannel As Long) As Long
Public Declare Function ZGetQuantityChannelDAC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByRef quantityChannel As Long) As Long

' прочитать вес младшего разряда АЦП/ЦАП (устаревшая функция)
Public Declare Function ZGetDigitalResolutionADC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByRef digitalResolution As Double) As Long
Public Declare Function ZGetDigitalResolutionDAC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByRef digitalResolution As Double) As Long
' прочитать откалиброванный поканально вес младшего разряда АЦП/ЦАП
Public Declare Function ZGetDigitalResolChanADC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByVal numberChannel As Long, _
 ByRef digitalResolution As Double) As Long
Public Declare Function ZGetDigitalResolChanDAC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByVal numberChannel As Long, _
 ByRef digitalResolution As Double) As Long

' прочитать кол-во бит в одном отсчете АЦП/ЦАП
Public Declare Function ZGetBitsADC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByRef numberBits As Long) As Long
Public Declare Function ZGetBitsDAC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByRef numberBits As Long) As Long
' прочитать кол-во слов в одном отсчете АЦП/ЦАП
Public Declare Function ZGetWordsADC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByRef numberWords As Long) As Long
Public Declare Function ZGetWordsDAC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByRef numberWords As Long) As Long

' прочитать частоту дискретизации
Public Declare Function ZGetFreqADC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByRef freq As Double) As Long
Public Declare Function ZGetFreqDAC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByRef freq As Double) As Long
' прочитать частоту из списка возможных частот дискретизации
Public Declare Function ZGetListFreqADC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByVal nextFreq As Long, ByRef freq As Double) As Long
Public Declare Function ZGetListFreqDAC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByVal nextFreq As Long, ByRef freq As Double) As Long
' установить следующую из списка частоту дискретизации
Public Declare Function ZSetNextFreqADC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByVal nextFreq As Long, ByRef freq As Double) As Long
Public Declare Function ZSetNextFreqDAC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByVal nextFreq As Long, ByRef freq As Double) As Long
' установить частоту дискретизации
Public Declare Function ZSetFreqADC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByVal FreqIn As Double, ByRef FreqOut As Double) As Long
Public Declare Function ZSetFreqDAC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByVal FreqIn As Double, ByRef FreqOut As Double) As Long

' прочитать значение текущей опорной частоты
Public Declare Function ZGetExtFreqADC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByRef OporFreq As Double) As Long
Public Declare Function ZGetExtFreqDAC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByRef OporFreq As Double) As Long
' установить значение внешней опорной частоты
Public Declare Function ZSetExtFreqADC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByVal extFreq As Double) As Long
Public Declare Function ZSetExtFreqDAC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByVal extFreq As Double) As Long
' прочитать статус синхронизации по внешней частоте
Public Declare Function ZGetEnableExtFreqADC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByRef enable As Long) As Long
Public Declare Function ZGetEnableExtFreqDAC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByRef enable As Long) As Long
' вкл./выкл. синхронизации по внешней частоте
Public Declare Function ZSetEnableExtFreqADC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByVal enable As Long) As Long
Public Declare Function ZSetEnableExtFreqDAC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByVal enable As Long) As Long
' прочитать статус внешнего запуска
Public Declare Function ZGetEnableExtStartADC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByRef enable As Long) As Long
Public Declare Function ZGetEnableExtStartDAC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByRef enable As Long) As Long
' вкл./выкл. внешнего запуска
Public Declare Function ZSetEnableExtStartADC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByVal enable As Long) As Long
Public Declare Function ZSetEnableExtStartDAC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByVal enable As Long) As Long
